tests/baselines/reference/unicodeExtendedEscapesInTemplates14_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates14_ES6.ts(2,13): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates14_ES6.ts (1 errors) ====
    // Shouldn't work, negatives are not allowed.
    var x = `\u{-DDDD}`;
                
!!! error TS1125: Hexadecimal digit expected.
    